# SistemasEmbarcados

./: CMakeLists.txt  README.md  hello_world.code-workspace
SistemasEmbarcados2/: CMakeLists.txt
main/: CMakeLists.txt  idf_component.yml  main.c
